# FrozenHot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.txt  log_16shard_5u_1thd_Zipf_0.99_0.5size_FIFO_FH_rebuild20.txt  log_16shard_5u_1thd_Zipf_0.99_0.5size_FIFO_rebuild0.txt  log_16shard_5u_1thd_Zipf_0.99_0.5size_LFU_FH_rebuild20.txt  log_16shard_5u_1thd_Zipf_0.99_0.5size_LFU_rebuild0.txt  log_16shard_5u_1thd_Zipf_0.99_0.5size_LRU_FH_rebuild20.txt  log_16shard_5u_1thd_Zipf_0.99_0.5size_LRU_rebuild0.txt  prepare.sh  run.py  run_no_trace.py  test_trace.cpp
cache/: FHCache.h  FIFO.h  FIFO_FH.h  baseCache.h  cache.h  cache_header.h  hhvm-scalable-cache.h  hhvm_lru_cache.h  hhvm_lru_cache_FH.h  lfu.h  lfu_FH.h  redis_lru.h  strict_lru.h
evaluation/: Instruction.md  description.md
evaluation/figure08/: PlotEvaluation(Figure 8.b)-msr-boxplot.py  handle_datafile msr.py  handle_datafile twitter.py  run_figure8.py
evaluation/figure09/: PlotEvaluation(Figure 9)-boxplot-hit-on-fc.py  handle_data.py  run_figure9.py
evaluation/figure10/: plot_hit_ratio_change(Figure 10).py
evaluation/figure11/: handle_data.py  plot_evaluation(Figure 11).py
evaluation/figure12/: handle_evaluation_fh.py  (+2 more)
hash/: CLHT.h  FastHashBase.h  TBBCHT.h  hash_header.h
ssdlogging/: abstract_log_writer.h  fs_log_writer.cc  fs_log_writer.h  properties.h  spdk_log_writer.cc  spdk_log_writer.h  spdk_logging_recovery.cc  spdk_logging_recovery.h  spdk_logging_server.cc  spdk_logging_server.h  ssdlogging_server.cc  ssdlogging_server.h  util.h
traceloader/: client.h  trace_loader.h  zipfian.h
(+26 files in other folders)
